userfriendlyscience NEWS
------------------------

0.5-3 2017-
* Fixed warning-generating 'bla' in pwr.cohensdCI

0.5-2 2016-12-15
* Fixed some errors in the list of exported functions
* descr function now uses the quantile function to compute the interquartile range
* Minor fix in dlvPlot (removed unknown aesthetic)
* Fix in invertItems to no longer simplify a dataframe to a vector if only one
  column is selected
* Added Coefficient H to scaleStructure
* Minor improvement in getData to enable suppressing messages
* Fix in meanDiff to better interpret measurement levels of input variables
* Added pwr.cohensdCI for 'power analyses' for Cohen's d confidence intervals
* Fix in 'modus' function (for finding the mode of a vector)

0.5-1 2016-11-09
* Minor tweaks to work with newest version of ggplot2
* No longer exporting all functions using regex but explicitly naming them now
  
0.5-0 2016-11-07
* Power function for Omega Squared was added
* diamondPlot functions were added
* Pander methods for some functions were added
* Some functions to make R more accessible for SPSS users were added (e.g. regr, oneway, examine)
* Confidence intervals implemented in Tukey and Games-Howell posthoc tests\
* Simple interfaces for generating ggplot scatterplots, Q-Q plots, boxplots, barcharts and pie charts were added
* showPearsonPower, a function to show the power of a Pearson correlation was added
* Cohen's d and Omega Squared distributions were added by converting to and from t and F
* A function to detect rare words was added
* Functions to automate figure and table captions in R Markdown/knitr were added
* therapyMonitor was added, a function to aid n-of-1 analyses for therapists
* prevalencePower was added, a function for power analyses for prevalence studies

0.4-0 2015-
* processOpenSesameIAT was added, to process OpenSesame IAT datafiles

0.3-0 2015-04-16
* Fixed powerHist to finally show frequencies with scaled normal curve
  and density curve