@@ -1,8 +1,8 @@
 Package: userfriendlyscience
 Type: Package
 Title: Quantitative Analysis Made Accessible
-Version: 0.5-2
-Date: 2016-12-15
+Version: 0.5-3
+Date: 2017
 Author: Gjalt-Jorn Peters
 Maintainer: Gjalt-Jorn Peters <gjalt-jorn@userfriendlyscience.com>
 License: GPL (>= 2)
@@ -17,7 +17,7 @@ Description: Contains a number of functions that serve
   perspectives, for example towards reasoning based on sampling
   distributions as opposed to on point estimates.
 URL: http://userfriendlyscience.com
-Imports: grDevices, stats, utils, scales, grid,
+Imports: grDevices, stats, utils, grid, scales,
          rio, pwr, SuppDists, plyr,
          psych, fBasics, MBESS, GPArotation, lavaan,
          MASS, mosaic, diptest, car, SCRT,
